syntax = "proto3";

package mangaplus_resp_app;

option go_package = "provider/mangaplus/mangaplus_resp_app";

enum Language {
  ENGLISH = 0;
  SPANISH = 1;
  FRENCH = 2;
  INDONESIAN = 3;
  PORTUGUESE = 4;
  RUSSIAN = 5;
  THAI = 6;
}

message Sns {
  string body = 1;
  string url = 2;
}

message Banner {
  string imageBanner = 1;
  Sns sns = 2;
  int32 viewCount = 3;
}

message Count {
  Language language = 1;
  int32 titles = 2;
}

message Chapter {
  uint32 titleId = 1;
  uint32 chapterId = 2;
  string titleName = 3;
  string chapterSubTitle = 4;
  string thumbnailUrl = 5;
  string startTimeStamp = 6;
  string endTimeStamp = 7;
  bool alreadyViewed = 8;
  bool isVerticalOnly = 9;
}

message Title {
  uint32 titleId = 1;
  string titleName = 2;
  string author = 3;
  string imagePortrait = 4;
  string imageLandscape = 5;
  uint32 viewCount = 6;
  Language language = 7;
}

message Category {
  string name = 1;
  repeated Title items = 2;
}

// Views
message Response {
  SuccessResult success = 1;
  ErrorResult error = 2;
}

message ErrorResult {

  message Item {
    string code = 1;
    string message = 2;

    message Button {
      string action = 1;
    }

    Button button = 5;
    Language language = 6;
  }

  Item default = 2;
  Item display = 3;
  repeated Item allLanguage = 5;
}

message SuccessResult {
  bool isFeaturedUpdated = 1;
  RegisterView registerView = 2;
  // registerationData = 3;
  FeaturedView featuredView = 4;
  // allTitlesView = 5;
  RankingView rankingView = 6;
  SubscribedTitlesView subscribedTitlesView = 7;
  TitleDetailView titleDetailView = 8;
  CommentView commentView = 9;
  MangaViewer mangaViewer = 10;
  // webHomeView = 11;
  ProfileView profileView = 13;
  UpdateProfileView updateProfileView = 14;
  HomeView homeView = 24;
  AllView allView = 25;
  SettingsView settingsView = 26;
  InitView initView = 28;
  ContentView contentView = 29;
  FreeTitlesView freeTitlesView = 33;
  // serviceAnnouncementsView
  // feedbackView
  // publisherNewsListView
  // questionnaireView
}

message ContentView {
  Language default = 1;
  Language display = 3;

  repeated Count counts = 5;
}

// -> /api/title_list/bookmark (GET)
message SubscribedTitlesView {
  repeated Title titles = 1;
}

// -> /api/title_list/ranking
message RankingView {
  repeated Title titles = 1;
}

// -> /api/comment
message CommentView {
  repeated Title titles = 1;
}

// -> /api/manga_viewer
message MangaViewer {

  message Page {

    message MangaPage {
      string imagePage = 1;
      uint32 width = 2;
      uint32 height = 3;
      enum Type {
        SINGLE = 0;
        LEFT = 1;
        RIGHT = 2;
        DOUBLE = 3;
      }
      Type type = 4;
      string encryptionKey = 5;
    }

    MangaPage page = 1;
  }

  repeated Page pages = 1;
  uint32 chapterId = 2;
  repeated Chapter chapters = 3;
  Sns sns = 4;
  string titleName = 5;
  string chapterName = 6;
  uint32 numberOfComments = 7;
  bool isVerticalOnly = 8;
  uint32 titleId = 9;
  bool startFromRight = 10;
  string country = 11;
}

// -> /api/profile (GET)
message ProfileView {

  message Icon {
    uint32 id = 1;
    string url = 2;
  }

  repeated Icon icons = 1;
  Icon default = 3;
}

// -> /api/profile (POST)
message UpdateProfileView {
  bool status = 1;
}

// -> /api/title_list/free_titles
message FreeTitlesView {

  message Item {
    Title title = 1;
    string lastUpdate = 2;
  }

  repeated Item titles = 1;
}

// -> /api/title_list/all_v2
message AllView {
  repeated Category titles = 1;
}

// -> /api/settings_v2
message SettingsView {
  Sns icon = 1;
  string username = 2;
  repeated Count counts = 5;
}

// -> /api/init_v2
message InitView {
  Language default = 1;
  repeated Count counts = 2;
}

// -> /api/register
message RegisterView {
  string secret = 1;
}

// -> /api/home_v3
message HomeView {
  repeated Banner banners = 1;

  message Update {
    string category = 1;

    message Item {
      string titleName = 1;
      string chapterName = 2;

      message Metadata {
        repeated Title title = 1;
        int32 chapterId = 2;
        string chapterName = 3;
        string chapterSubTitle = 4;
        Language language = 5;
      }

      Metadata metadata = 3;
    }

    repeated Item items = 2;
  }

  repeated Update updates = 2;

  message Popup {

    message Resource {
      Sns sns = 1;
      string imagePopup = 2;
    }

    Resource resource = 4;
    int32 viewCount = 5;
  }

  Popup popup = 9;
}

// -> /api/featured
message FeaturedView {
  Banner topBanner = 1;
  Banner topLeft = 2;
  Banner topRight = 3;

  message Featured {
    Banner banner = 1;
    Category category = 2;
  }

  repeated Featured featured = 4;
}

// -> /api/title_detailV2
message TitleDetailView {
  Title title = 1;
  string imageTitle = 2;
  string overview = 3;
  string imageBackground = 4;
  uint32 nextTimeStamp = 5;

  enum UpdateTiming {
    NOT_REGULARLY = 0;
    MONDAY = 1;
    TUESDAY = 2;
    WEDNESDAY = 3;
    THURSDAY = 4;
    FRIDAY = 5;
    SATURDAY = 6;
    SUNDAY = 7;
    DAY = 8;
  }

  UpdateTiming updateTiming = 6;
  string viewingPeriodDescription = 7;
  string nonAppearanceInfo = 8;
  // repeated Chapter firstChapterList = 9;
  // repeated Chapter lastChapterList = 10;
  repeated Banner banners = 11;
  repeated Title recommendedTitleList = 12;
  Sns sns = 13;
  bool isSimulcastReleased = 14;
  bool isSubscribed = 15;
  enum Rating {
    ALLAGE = 0;
    TEEN = 1;
    TEENPLUS = 2;
    MATURE = 3;
  }
  Rating rating = 16;
  bool chaptersDescending = 17;
  uint32 numberOfViews = 18;
  // publisherItems = 19;
  Banner titleBanners = 20;

  message AllLanguage {
    uint32 titleId = 1;
    Language language = 2;
  }
  repeated AllLanguage allLanguage = 27;

  message Chapters {
    uint32 count = 1;
    repeated Chapter firstChapterList = 2;
    repeated Chapter chapterList = 3;
    repeated Chapter lastChapterList = 4;
  }

  repeated Chapters chapters = 28;
  string country = 30;
}